1px align fix (#135)

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -121,7 +121,7 @@ header {
     width: 100vw;
     z-index: 21;
     top: 56px;
-    left: -15px;
+    left: -16px;
     right: 0;
     transform: translate(0, -16px);
     box-shadow: 0 16px 32px 0 rgba(0, 0, 0, 0.16);
